Migrate `cdlclient` to `sigima.client` subpackage

--- a/doc/locale/fr/LC_MESSAGES/api/index.po
+++ b/doc/locale/fr/LC_MESSAGES/api/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-04 14:05+0200\n"
+"POT-Creation-Date: 2025-10-03 14:48+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -62,5 +62,10 @@ msgid ":mod:`sigima.config`"
 msgstr ""
 
 msgid "Configuration management for the Sigima library, including options for data paths, translations, and other settings."
+msgstr "Gestion de la configuration pour la bibliothèque Sigima, y compris les options pour les chemins de données, les traductions et d'autres paramètres."
+
+msgid ":mod:`sigima.client`"
 msgstr ""
 
+msgid "Client interface for connecting to DataLab application through XML-RPC protocol, providing remote control capabilities for signal and image processing workflows."
+msgstr "Interface client pour se connecter à l'application DataLab via le protocole XML-RPC, offrant des capacités de contrôle à distance pour les flux de travail de traitement de signaux et d'images."
