--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  sigima\n"
 "Report-Msgid-Bugs-To: p.raybaut@codra.fr\n"
-"POT-Creation-Date: 2025-10-04 13:07+0200\n"
+"POT-Creation-Date: 2025-10-07 15:01+0200\n"
 "PO-Revision-Date: 2025-05-22 15:46+0200\n"
 "Last-Translator: Christophe Debonnel <c.debonnel@codra.fr>\n"
 "Language: fr\n"
@@ -336,7 +336,9 @@ msgstr "Inverser la logique de la ROI"
 msgid ""
 "When disabled (default), the ROI defines an area inside the shape on which to focus (masking data outside).\n"
 "When enabled, the ROI logic is inverted to focus on data outside the shape (masking data inside)."
-msgstr "Lorsque le réglage est désactivé (par défaut), la ROI définit une zone à l'intérieur de la forme sur laquelle se concentrer (masquant les données à l'extérieur).\nLorsque le réglage est activé, la logique de la ROI est inversée pour se concentrer sur les données à l'extérieur de la forme (masquant les données à l'intérieur)."
+msgstr ""
+"Lorsque le réglage est désactivé (par défaut), la ROI définit une zone à l'intérieur de la forme sur laquelle se concentrer (masquant les données à l'extérieur).\n"
+"Lorsque le réglage est activé, la logique de la ROI est inversée pour se concentrer sur les données à l'extérieur de la forme (masquant les données à l'intérieur)."
 
 msgid "Lorentzian"
 msgstr "Lorentzienne"
@@ -1325,3 +1327,4 @@ msgstr "Nombre de colonnes"
 
 msgid "Centroid"
 msgstr "Barycentre"
+
